--- a/service.yml
+++ b/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bms-service
+  name: gopi-bms-service
   labels:
     app: bms
 spec:
@@ -10,4 +10,4 @@ spec:
   - port: 80
     targetPort: 3000  # Replace with the port your app runs on
   selector:
-    app: bms
+    app: gopi-bms
